--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,18 +1,20 @@
 ---
+import Link from "./Link.astro";
 ---
 
-<header>
-       <div>
-         <img
-           src="/images/aose_black.svg"
-           alt="black logo aOSE"
-         />
-         <h1>An Ordinary Software Engineering</h1>
-       </div>
-       <div>
-         <nav>
-           <a href="#" rel="posts">Posts</a>
-           <a href="#" rel="about">About</a>
-         </nav>
-       </div>
+<header 
+  class="flex h-max border-b-b-aose border-b-4 rounded-b-3xl justify-between items-center font-bold"
+>
+      <div class="flex m-2 items-center">
+        <img
+          class="w-20"
+          src="/images/aose_black.svg"
+          alt="black logo aOSE"
+        />
+        <h1 class="ml-4 text-2xl">An Ordinary Software Engineering</h1>
+      </div>
+      <nav class="flex gap-8 h-fit m-4">
+        <Link link="#" rel="next" blankActive={false}>Posts</Link>
+        <Link link="#" rel="author" blankActive={false}>About</Link>
+      </nav>
 </header>
