--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -1,9 +1,15 @@
 ---
+interface Props {
+    link: string;
+    rel: string;
+    blankActive: boolean;
+}
+
 const { link, rel, blankActive } = Astro.props;
 ---
 
 <a
-    class="bg-b-aose rounded-3xl py-1 px-8 text-[#f9f9f9] text-lg font-bold"
+    class="transition-colors ease-linear delay-150 bg-inherit border-2 border-b-aose hover:bg-b-aose rounded-3xl py-1 px-8 text-b-aose hover:text-[#f9f9f9] text-lg font-bold"
     href={link}
     rel={rel}
     target={blankActive ? "_blank" : "_self"}
