--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,6 +3,10 @@ import "../styles/globals.css";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 
+interface Props {
+	pageTitle: string;
+}
+
 const { pageTitle } = Astro.props;
 ---
 
@@ -16,7 +20,7 @@ const { pageTitle } = Astro.props;
 	</head>
 	<body>
 		<Header />
-		<main>
+		<main class="grid grid-cols-3 gap-1">
 			<slot />
 		</main>
 		<Footer />
