--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,14 +7,7 @@ html {
 }
 
 main {
-    display: flex;
-    flex-wrap: wrap;
-    align-content: flex-start;
-    justify-content: flex-start;
-    gap: 25px 30px;
-    min-height: calc(
-      100vh - 140px
-    );
-    padding: 20px 95px;
-    box-sizing: border-box;
-  }
+  min-height: calc(100vh - 140px);
+  padding: 20px 95px;
+  box-sizing: border-box;
+}
