--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,6 @@
 ---
+import { Image } from "astro:assets";
+import aoseImg from "../assets/aose_black.svg";
 import Link from "./Link.astro";
 ---
 
@@ -6,10 +8,10 @@ import Link from "./Link.astro";
   class="flex h-max border-b-b-aose border-b-4 rounded-b-3xl justify-between items-center font-bold"
 >
       <div class="flex m-2 items-center">
-        <img
+        <Image
           class="w-20"
-          src="/images/aose_black.svg"
-          alt="black logo aOSE"
+          src={aoseImg}
+          alt="aOSE logo"
         />
         <h1 class="ml-4 text-2xl">An Ordinary Software Engineering</h1>
       </div>
