style: applying 'grid-layout' on '<main />' tag

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
+import PostCard from "../components/PostCard.astro";
 ---
 
 <BaseLayout pageTitle="aOSE | TechBlog">
-	<p>Testando...</p>
+
 </BaseLayout>
