--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -20,7 +20,7 @@ const { pageTitle } = Astro.props;
 	</head>
 	<body>
 		<Header />
-		<main class="grid grid-cols-3 gap-1">
+		<main class="grid grid-cols-3 px-36 mb-3 gap-y-8">
 			<slot />
 		</main>
 		<Footer />
