--- a/src/components/TopBar.astro
+++ b/src/components/TopBar.astro
@@ -1,6 +1,7 @@
 ---
 import { Icon } from "astro-icon/components";
 import { Difficulty } from "../scripts/types/post_data.ts";
+import { getBgClass } from "../scripts/getBgClass.ts";
 
 interface Props {
     difficulty: Difficulty;
@@ -10,7 +11,7 @@ const { difficulty } = Astro.props;
 ---
 
 <div class="flex justify-between items-center font-bold w-full">
-    <button class={`px-0.5 text-center w-20 rounded-full font-bold bg-${difficulty}`}>
+    <button class={`px-0.5 text-center w-20 rounded-full font-bold ${getBgClass(difficulty)}`}>
         <p>{difficulty}</p>
     </button>
     <button>
