fix: replacing element with an 'svg' icon

--- a/src/components/TopBar.astro
+++ b/src/components/TopBar.astro
@@ -10,8 +10,8 @@ const { difficulty } = Astro.props;
 ---
 
 <div class="flex justify-between items-center font-bold w-full">
-    <button class={`px-0.5 text-center w-20 rounded-full font-bold bg-${difficulty}`}>
-        <p>{difficulty}</p>
+    <button class="px-0.5 text-center w-20 rounded-full font-bold">
+        <Icon name={`diff/${difficulty}`} title={`level ${difficulty}`} />
     </button>
     <button>
         <Icon name="gear" title="settings" size={20} />
