--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -9,7 +9,7 @@ const { link, rel, blankActive } = Astro.props;
 ---
 
 <a
-    class="transition-colors ease-linear delay-150 bg-inherit border-2 border-b-aose hover:bg-b-aose rounded-xl py-1 px-6 text-b-aose hover:text-[#f9f9f9] text-lg font-bold"
+    class="transition-colors ease-linear delay-100 py-1 px-6 hover:bg-[#f5f5f5] rounded-full text-b-aose text-lg font-bold"
     href={link}
     rel={rel}
     target={blankActive ? "_blank" : "_self"}
