refactor: generalizing 'BaseLayout' for future layouts

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,7 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-import PostCard from "../components/PostCard.astro";
 ---
 
 <BaseLayout pageTitle="aOSE | TechBlog">
-
+    <main>Testando</main>
 </BaseLayout>
