style: changing 'bg-color'of '<footer>' tag from 'g-aose' to 'b-aose'

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,10 +1,4 @@
 ---
-import Link from "./Link.astro";
-
-const personalAccount: string = "https://github.com/csvitor-dev";
-const organizationAccount: string = "https://github.com/An-Ordinary-Software-Engineering";
 ---
-<footer class="flex h-max py-6 justify-center gap-28 rounded-t-3xl bg-g-aose">
-    <Link link={personalAccount} rel="external" blankActive={true}>My Personal GitHub</Link>
-    <Link link={organizationAccount} rel="external" blankActive={true}>Organization GitHub</Link>
+<footer class="flex min-h-20 h-max py-6 justify-center gap-28 rounded-t-3xl bg-b-aose">
 </footer>
