style: fixing alignment of '<main>' tag

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@ import NavBar from "./NavBar.astro";
   class="flex h-20 border-b-b-aose border-b-4 rounded-b-3xl justify-between items-center"
 >
       <Image
-        class="m-1 w-16"
+        class="ml-5 w-16"
         src={aoseImg}
         alt="aOSE logo"
       />
