--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -3,7 +3,7 @@ import BaseLayout from "./BaseLayout.astro";
 ---
 
 <BaseLayout pageTitle="Posts | TechBlog">
-    <main class="grid grid-cols-3 px-36 mb-3 gap-y-8">
+    <main class="grid grid-cols-3 justify-items-center px-10 mb-3 gap-y-8">
         <slot />
     </main>
 </BaseLayout>
