style: adding scale transition for GitHub profile anchor and color change in both 'GitHubProj' and 'Link' components

--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -9,7 +9,7 @@ const { link, rel, blankActive } = Astro.props;
 ---
 
 <a
-    class="transition-colors ease-in delay-150 py-1 px-4 hover:bg-g-aose rounded-full text-b-aose text-lg font-bold"
+    class="transition-colors ease-in delay-150 py-1 px-4 hover:bg-[#f0f0f0] rounded-full text-b-aose text-lg font-bold"
     href={link}
     rel={rel}
     target={blankActive ? "_blank" : "_self"}
