refactor: 'post_data.ts' -> 'Post.ts'

--- a/src/components/TopBar.astro
+++ b/src/components/TopBar.astro
@@ -1,6 +1,6 @@
 ---
 import { Icon } from "astro-icon/components";
-import { Difficulty } from "../scripts/types/post_data.ts";
+import { type Difficulty } from "../scripts/types/Post.ts";
 
 interface Props {
     difficulty: Difficulty;
