--- a/src/pages/posts.astro
+++ b/src/pages/posts.astro
@@ -1,7 +1,7 @@
 ---
 import PostLayout from "../layouts/PostLayout.astro";
 import PostCard from "../components/PostCard.astro";
-import { type Post } from "../scripts/types/post_data.ts";
+import { type Post } from "../scripts/types/Post.ts";
 
 const posts: Post[] = [ 
     {
