--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -3,7 +3,7 @@ import BaseLayout from "./BaseLayout.astro";
 ---
 
 <BaseLayout pageTitle="aOSE | TechBlog">
-    <main>
+    <main class="py-8">
         <slot />
     </main>
 </BaseLayout>
