--- a/src/components/MediaList.astro
+++ b/src/components/MediaList.astro
@@ -4,6 +4,7 @@ import Media from './Media.astro';
 interface Props {
     media: {
         iconRef: string;
+        name: string;
         url: string;
     }[];
 }
