style: adding grayscale transition to stack icons

--- a/src/components/Stack.astro
+++ b/src/components/Stack.astro
@@ -14,7 +14,7 @@ const path = `stack/${info.iconRef}`;
 ---
 
 <div 
-    class="w-fit h-fit p-1 m-1 transiiton hover:scale-105 ease-out duration-100 bg-[#f1f1f1] border-2 border-[#dadada] rounded-lg shadow-md"
+    class="w-fit h-fit p-1 m-1 transition filter grayscale hover:grayscale-0 hover:saturate-100 hover:scale-105 ease-in-out duration-150 bg-[#f1f1f1] border-2 border-[#dadada] rounded-lg shadow-md"
 >
     <Icon name={path} title={info.name} size={45} />
 </div>
