--- a/src/components/AuthorInfo.astro
+++ b/src/components/AuthorInfo.astro
@@ -1,28 +1,28 @@
 ---
 import { Image } from "astro:assets";
-import { type AboutInfo } from "../scripts/types/AboutInfo";
+import { type Author } from "../scripts/types/Author";
 import Title from "./Title.astro";
 import MediaList from "./MediaList.astro";
 import StackList from "./StackList.astro";
 
 interface Props {
-    user: AboutInfo;
+    author: Author;
 }
 
-const { user } = Astro.props;
-const { media, stacks } = user;
+const { author } = Astro.props;
+const { media, stacks } = author;
 ---
 
 <article class="flex p-3 mt-8 bg-g-aose rounded-lg">
     <Image 
         class="w-52 max-h-52 mr-5 rounded-lg"
-        src={user.avatarUrl}
+        src={author.avatarUrl}
         alt="Personal GitHub"
         width={100}
         height={100}
     />
     <div class="flex flex-col w-[100%]">
-        <Title>{user.username}</Title>
+        <Title>{author.name}</Title>
         {media && <MediaList media={media} />}
         {stacks && <StackList stacks={stacks} />}
     </div>
