--- a/src/components/AuthorInfo.astro
+++ b/src/components/AuthorInfo.astro
@@ -2,6 +2,7 @@
 import { Image } from "astro:assets";
 import { type Author } from "../scripts/types/Author";
 import Title from "./Title.astro";
+import Description from "./Description.astro";
 import MediaList from "./MediaList.astro";
 import StackList from "./StackList.astro";
 
@@ -13,7 +14,7 @@ const { author } = Astro.props;
 const { media, stacks } = author;
 ---
 
-<article class="flex p-3 mt-8 bg-g-aose rounded-lg">
+<article class="flex p-3 mt-8 w-fit bg-g-aose rounded-lg">
     <Image 
         class="w-52 max-h-52 mr-5 rounded-lg"
         src={author.avatarUrl}
@@ -21,9 +22,13 @@ const { media, stacks } = author;
         width={100}
         height={100}
     />
-    <div class="flex flex-col w-[100%]">
+    <div class="flex flex-col w-fit">
         <Title>{author.name}</Title>
         {media && <MediaList media={media} />}
         {stacks && <StackList stacks={stacks} />}
     </div>
+    <span class="border-[1px] border-[#f1f1f1] mx-5"></span>
+    <Description subTitle="About me">
+        {author.description}
+    </Description>
 </article>
