perf: optimizing image loading (*)

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,6 +11,7 @@ import NavBar from "./NavBar.astro";
         class="ml-5 w-16"
         src={aoseImg}
         alt="aOSE logo"
+        loading="eager"
       />
       <NavBar />
 </header>
