style: appending some stylistic details in 'Media' and 'NavBar'

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -7,6 +7,6 @@ import GitHubProj from "./GitHubProj.astro";
     <Link link="/" rel="next" blankActive={false}>Home</Link>
     <Link link="/posts/" rel="next" blankActive={false}>Posts</Link>
     <Link link="/repos/" rel="next" blankActive={false}>Repos</Link>
-    <Link link="/about/" rel="author" blankActive={false}>About</Link>
+    <Link link="/about/" rel="author" blankActive={false}>Sobre</Link>
     <GitHubProj />
 </nav>
