style: width config and translate text to 'UI' ('en' -> 'pt-br')

--- a/src/components/AuthorInfo.astro
+++ b/src/components/AuthorInfo.astro
@@ -26,7 +26,7 @@ const { Content } = await description?.render();
         height={100}
         loading="eager"
     />
-    <section class="flex flex-col w-fit">
+    <section class="flex flex-col w-[50%]">
         <Title>{author.name}</Title>
         {media && <MediaList media={media} />}
         {stacks && <StackList stacks={stacks} />}
