--- a/src/components/MediaList.astro
+++ b/src/components/MediaList.astro
@@ -14,7 +14,7 @@ const { media } = Astro.props;
 ---
 
 <section class="mb-1">
-    <SubTitle>Contacts | Media</SubTitle>
+    <SubTitle>Contatos | Mídias</SubTitle>
     <div class="flex">
         {media.map((m) => (
             <Media info={m} />
