--- a/src/components/StackList.astro
+++ b/src/components/StackList.astro
@@ -12,7 +12,7 @@ interface Props {
 const { stacks } = Astro.props;
 ---
 <section class="mb-1">
-    <SubTitle>Skills</SubTitle>
+    <SubTitle>Habilidades | Aprendizagem</SubTitle>
     <div class="grid grid-cols-4 grid-rows-2 w-72">
         {stacks.map((s) => (
             <Stack info={s} />
