refactor: propagating the same title to all layouts

--- a/src/layouts/AboutLayout.astro
+++ b/src/layouts/AboutLayout.astro
@@ -2,7 +2,7 @@
 import BaseLayout from "./BaseLayout.astro"
 ---
 
-<BaseLayout pageTitle="Sobre | TechBlog">
+<BaseLayout pageTitle="Sobre">
     <main class="py-8">
         <slot />
     </main>
