--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -2,7 +2,7 @@
 import BaseLayout from "./BaseLayout.astro";
 ---
 
-<BaseLayout pageTitle="Posts | TechBlog">
+<BaseLayout pageTitle="Posts">
     <main class="grid grid-cols-3 justify-items-center px-10 mb-3 gap-y-8">
         <slot />
     </main>
