--- a/src/layouts/RepoLayout.astro
+++ b/src/layouts/RepoLayout.astro
@@ -2,7 +2,7 @@
 import BaseLayout from "./BaseLayout.astro";
 ---
 
-<BaseLayout pageTitle="Repos | TechBlog">
+<BaseLayout pageTitle="Repos">
     <main>
         <slot />
     </main>
