--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ import NavBar from "./NavBar.astro";
 ---
 
 <header 
-  class="flex h-20 border-b-b-aose border-b-4 rounded-b-3xl justify-between items-center"
+  class="flex h-20 border-b-b-aose border-b-4 justify-between items-center"
 >
       <Image
         class="ml-5 w-16"
