refactor(collection): refactoring 'fetch' -> 'fetchAll' + 'fetchAuthorData'
The intention is to make the function more cohesive, even if it isn't
completely reusable

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,9 +1,9 @@
 ---
 import AboutLayout from "../layouts/AboutLayout.astro";
 import AuthorInfo from "../components/AuthorInfo.astro";
-import { fetch } from "../scripts/authorsFetch.ts";
+import { fetchAll } from "../scripts/fetchData.ts";
 
-const authors = fetch();
+const authors = await fetchAll();
 ---
 
 <AboutLayout>
