refactor: adding link to root '/' in main logo

--- a/src/components/GitHubProj.astro
+++ b/src/components/GitHubProj.astro
@@ -5,7 +5,7 @@ const organization: string = "https://github.com/An-Ordinary-Software-Engineerin
 ---
 
 <a href={organization} rel="external" target="_blank"
-    class="ml-2 p-1 transition-all ease-linear hover:bg-[#f0f0f0] hover:scale-110 rounded-lg"
+    class="ml-2 p-1 transition-all ease-linear hover:bg-w-aose hover:scale-110 rounded-lg"
 >
     <Icon
         class="w-8"
