chore: changing layout title

--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -2,7 +2,7 @@
 import BaseLayout from "./BaseLayout.astro";
 ---
 
-<BaseLayout pageTitle="aOSE">
+<BaseLayout pageTitle="Home">
     <main class="py-8">
         <slot />
     </main>
