--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -4,8 +4,8 @@ import GitHubProj from "./GitHubProj.astro";
 ---
 
 <nav class="flex gap-4 w-fit m-4 items-center">
-    <Link link="/" rel="next" blankActive={false}>Home</Link>
-    <Link link="/posts/" rel="next" blankActive={false}>Posts</Link>
+    <Link link="/" rel="next" blankActive={false}>Início</Link>
+    <Link link="/cards/" rel="next" blankActive={false}>Posts</Link>
     <Link link="/repos/" rel="next" blankActive={false}>Repos</Link>
     <Link link="/about/" rel="author" blankActive={false}>Sobre</Link>
     <GitHubProj />
