--- a/src/components/TopBar.astro
+++ b/src/components/TopBar.astro
@@ -13,7 +13,11 @@ const { difficulty } = Astro.props;
     <button class="px-0.5 text-center w-20 rounded-full font-bold">
         <Icon name={`diff/${difficulty}`} title={`level ${difficulty}`} />
     </button>
-    <button>
-        <Icon name="gear" title="settings" size={20} />
+    <button
+        class="transition-transform hover:scale-110"
+    >
+        <Icon 
+            name="gear" title="settings" size={20} 
+        />
     </button>
 </div>
