refactor: matching schema to interface

--- a/src/pages/cards.astro
+++ b/src/pages/cards.astro
@@ -1,10 +1,11 @@
 ---
+import type { CollectionEntry } from "astro:content";
 import { getCollection } from "astro:content";
 import PostCard from "../components/PostCard.astro";
 import CardLayout from "../layouts/CardLayout.astro";
 import type { Post } from "../scripts/types/Post.ts";
 
-const metaData = await getCollection("posts");
+const metaData: CollectionEntry<"posts">[] = await getCollection("posts");
 ---
 
 <CardLayout>
