refactor: propagating the layout changes

--- a/src/layouts/AboutLayout.astro
+++ b/src/layouts/AboutLayout.astro
@@ -2,8 +2,6 @@
 import BaseLayout from "./BaseLayout.astro"
 ---
 
-<BaseLayout pageTitle="Sobre">
-    <main class="py-8">
-        <slot />
-    </main>
+<BaseLayout title="Sobre" className="py-8">
+    <slot />
 </BaseLayout>
