--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -2,8 +2,6 @@
 import BaseLayout from "./BaseLayout.astro";
 ---
 
-<BaseLayout pageTitle="Home">
-    <main class="py-8">
-        <slot />
-    </main>
+<BaseLayout title="Home" className="py-8">
+    <slot />
 </BaseLayout>
