--- a/src/layouts/RepoLayout.astro
+++ b/src/layouts/RepoLayout.astro
@@ -2,8 +2,6 @@
 import BaseLayout from "./BaseLayout.astro";
 ---
 
-<BaseLayout pageTitle="Repos">
-    <main>
-        <slot />
-    </main>
+<BaseLayout title="Repos">
+    <slot />
 </BaseLayout>
