--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -11,11 +11,9 @@ const { post } = Astro.props;
 const { src, alt } = post.heroImg;
 ---
 
-<BaseLayout pageTitle={post.title}>
-    <main>
-        <img src={src} alt={alt} loading="eager" width="100" />
-        <article>
-            <slot />
-        </article>
-    </main>
+<BaseLayout title={post.title}>
+    <img src={src} alt={alt} loading="eager" width="100" />
+    <article>
+        <slot />
+    </article>
 </BaseLayout>
