chore: applying path configuration in 'tsconfig.json'

--- a/src/components/AuthorInfo.astro
+++ b/src/components/AuthorInfo.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import { type Author } from "../scripts/types/Author";
+import { type Author } from "@scripts/types/Author";
 import Title from "./Title.astro";
 import Presentation from "./Presentation.astro";
 import MediaList from "./MediaList.astro";
