--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,9 +1,9 @@
 ---
 import { Image } from "astro:assets";
 import { getEntry } from "astro:content";
-import aoseImg from "../assets/aose_white.svg";
+import aoseImg from "@assets/aose_white.svg";
 import Anchor from "./Anchor.astro";
-import { currentYear } from "../content/schemas";
+import { currentYear } from "@content/schemas";
 
 interface Data {
     year: number | null;
