--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import aoseImg from "../assets/aose_black.svg";
+import aoseImg from "@assets/aose_black.svg";
 import NavBar from "./NavBar.astro";
 ---
 
