--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -2,7 +2,7 @@
 import { Image } from "astro:assets";
 import Title from "./Title.astro";
 import TopBar from "./TopBar.astro";
-import { type Post } from "../scripts/types/Post.ts";
+import { type Post } from "@scripts/types/Post.ts";
 
 interface Props {
     post: Post;
