--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -1,5 +1,5 @@
 ---
-import type { Post } from "../scripts/types/Post";
+import type { Post } from "@scripts/types/Post";
 import BaseLayout from "./BaseLayout.astro";
 
 interface Props {
