--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,6 +1,6 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
-import Anchor from "../components/Anchor.astro";
+import BaseLayout from "@layouts/BaseLayout.astro";
+import Anchor from "@components/Anchor.astro";
 ---
 
 <BaseLayout 
