--- a/src/pages/repos.astro
+++ b/src/pages/repos.astro
@@ -1,5 +1,5 @@
 ---
-import RepoLayout from "../layouts/RepoLayout.astro";
+import RepoLayout from "@layouts/RepoLayout.astro";
 ---
 
 <RepoLayout>
