--- a/src/components/TopBar.astro
+++ b/src/components/TopBar.astro
@@ -1,6 +1,6 @@
 ---
 import { Icon } from "astro-icon/components";
-import { type Difficulty } from "../scripts/types/Post.ts";
+import { type Difficulty } from "@scripts/types/Post.ts";
 
 interface Props {
     difficulty: Difficulty;
