feat: starting to create the layout for the posts

--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -1,4 +1,5 @@
 ---
+import { Image } from "astro:assets";
 import type { Post } from "@scripts/types/Post";
 import BaseLayout from "./BaseLayout.astro";
 
@@ -11,9 +12,26 @@ const { post } = Astro.props;
 const { src, alt } = post.heroImg;
 ---
 
-<BaseLayout title={post.title} description={post.meta}>
-    <img src={src} alt={alt} loading="eager" width="100" />
-    <article>
+<BaseLayout 
+    title={post.title} 
+    description={post.meta} 
+    className="flex flex-col items-center px-40" 
+>
+    <Image 
+        src={src} 
+        alt={alt} 
+        height={100} 
+        width={150} 
+        loading="eager" 
+        class="mb-8 min-h-96 min-w-full rounded-xl"
+    />
+    <article class="px-4 py-6 w-[64rem] bg-g-aose rounded-lg shadow-post">
+        <section class="p-3 mb-5 bg-w-aose rounded-md">
+            <h1>
+                <b>{post.title}</b>
+            </h1>
+            <p>{post.description}</p>
+        </section>
         <slot />
     </article>
 </BaseLayout>
